#1h2a7pp : Add no-auth route for wynd
